--- a/views/room.ejs
+++ b/views/room.ejs
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        const ROOM_ID = "<%= roomId %>"
+        const ROOM_ID = "<%= roomId %>" //roomId string
     </script>
+    
+    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="script.js" defer></script>
+
     <title>Document</title>
     <style>
         #video-grid {
